Fixed a mistake where scene 1 was not working on mobile devices

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -621,8 +621,4 @@ body::-webkit-scrollbar {
   .title-container .title {
     margin-bottom: 1rem;
   }
-
-  .infoScene{
-    display: none;
-  }
 }
